--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,9 @@
   --accentText: 244 241 232;
   --chipBg: 178 214 150;
   --chipText: 26 44 28;
+  --activeBg: 150 192 124;
+  --activeText: 22 36 24;
+  --activeBorder: 108 148 96;
   --assistant: 238 246 230;
   --user: 250 243 224;
   --font-sans: "Space Grotesk", "Helvetica Neue", Arial, sans-serif;
@@ -33,6 +36,9 @@
   --accentText: 13 24 16;
   --chipBg: 56 63 72;
   --chipText: 224 231 238;
+  --activeBg: 36 42 50;
+  --activeText: 230 236 242;
+  --activeBorder: 86 124 102;
   --assistant: 40 46 54;
   --user: 52 60 70;
 }
@@ -51,6 +57,9 @@
   --color-user: var(--user);
   --color-chip: var(--chipBg);
   --color-chip-text: var(--chipText);
+  --color-active-bg: var(--activeBg);
+  --color-active-text: var(--activeText);
+  --color-active-border: var(--activeBorder);
 }
 
 * {
